--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,114 @@
 <!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>BpjsReduxNormalization</title>
-  <base href="/">
+<html class="no-js" lang="en">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<head>
+  <title>BudapestJS</title>
+  <base href="/">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- inline spinner styles to be able to display spinner right away -->
+  <style type="text/css">
+    body,
+    html {
+      height: 100%;
+      padding: 0;
+      margin: 0;
+    }
+
+    .container {
+      overflow: hidden;
+      width: 100%;
+      height: 100%;
+    }
+
+    .fb_reset {
+      display: none;
+    }
+
+    .app-loading h1.logo {
+      margin: 0;
+      color: #333;
+      font-family: Arial, sans-serif;
+      font-size: 90px;
+      font-weight: bold;
+      line-height: 1.4;
+
+    }
+
+    .app-loading h1.logo span {
+      color: #39b4e3;
+    }
+
+    .app-loading {
+      position: relative;
+      display: flex;
+      height: 100%;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 0;
+      margin: 0;
+    }
+
+    .app-loading .spinner {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      width: 200px;
+      height: 200px;
+      margin: auto;
+      animation: rotate 2s linear infinite;
+      transform-origin: center center;
+    }
+
+    .app-loading .spinner .path {
+      animation: dash 1.5s ease-in-out infinite;
+      stroke: #39b4e3;
+      stroke-dasharray: 1, 200;
+      stroke-dashoffset: 0;
+      stroke-linecap: round;
+    }
+
+    @keyframes rotate {
+      100% {
+        transform: rotate(360deg);
+      }
+    }
+
+    @keyframes dash {
+      0% {
+        stroke-dasharray: 1, 200;
+        stroke-dashoffset: 0;
+      }
+
+      50% {
+        stroke-dasharray: 89, 200;
+        stroke-dashoffset: -35px;
+      }
+
+      100% {
+        stroke-dasharray: 89, 200;
+        stroke-dashoffset: -124px;
+      }
+    }
+  </style>
 </head>
+
 <body>
-  <app-root></app-root>
+  <app-router>
+    <div class="container">
+      <!-- loading layout replaced by app after startup -->
+      <div class="app-loading">
+        <h1 class="logo">i<span>t</span></h1>
+        <svg class="spinner" viewBox="25 25 50 50">
+          <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10" />
+        </svg>
+      </div>
+    </div>
+  </app-router>
 </body>
+
 </html>
